[package]
name = "webgl1"
version = "0.1.0"
authors = ["Craig <indigomx9@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.40"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "Window",
]

